# backend/router/system_user.go
@@ -8,5 +8,7 @@ func (r *SystemUserRouter) InitSystemUserRouter(Router *gin.RouterGroup) {
 	router := Router.Group("user")
 	{
 		router.GET("get_info", systemUserHandler.GetUserInfo)
+		router.POST("add", systemUserHandler.AddSystemUser)
+		router.POST("get_page", systemUserHandler.GetSystemUserPageData)
 	}
 }
